# RHINO-MAG

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/models/: 3C90_GRU8_reduced-features-f32_b5ce7dc9_seed12.eqx  3C94_GRU8_reduced-features-f32_336485cb_seed12.eqx  3E6_GRU8_reduced-features-f32_7ff91a7c_seed12.eqx  3F4_GRU8_reduced-features-f32_a83212e4_seed12.eqx  77_GRU8_reduced-features-f32_2eb8cc0c_seed12.eqx  78_GRU8_reduced-features-f32_3406a9c8_seed12.eqx  A_GRU8_final-reduced-features-f32_0d2b6cb5_seed12.eqx  A_GRU8_reduced-features-f32_2a1473b6_seed12.eqx  B_GRU8_final-reduced-features-f32_6437bf39_seed12.eqx  B_GRU8_reduced-features-f32_c785b2c3_seed12.eqx  C_GRU8_final-reduced-features-f32_5fe02cfa_seed12.eqx  C_GRU8_reduced-features-f32_348e220c_seed12.eqx  D_GRU8_final-reduced-features-f32_3d0f8de4_seed12.eqx  D_GRU8_reduced-features-f32_b6ac55b5_seed12.eqx  E_GRU8_final-reduced-features-f32_8f8a200e_seed12.eqx  E_GRU8_reduced-features-f32_e88a2583_seed12.eqx  N27_GRU8_reduced-features-f32_2a482429_seed12.eqx  N30_GRU8_reduced-features-f32_b3ec1c0f_seed12.eqx  N49_GRU8_reduced-features-f32_6f23a1f0_seed12.eqx  N87_GRU8_reduced-features-f32_3f598f03_seed12.eqx
data/raw/: sort_data_in.py
dev/: inspect_raw_data.ipynb
dev/data_inspection/: exploratory_data_analysis.ipynb  exploratory_data_analysis_3C90.ipynb  hv-1.0-exploratory_data_analysis.ipynb  hv-1.1-fe_example.ipynb  hv-exploratory_data_analysis_final_training_data.ipynb  hv-inspect_final_test_set.ipynb  hv-time_shift.ipynb  inspect_raw_data.ipynb  os-1.0-data_splitting.ipynb  os-1.1-features_3C90 copy.ipynb  os-2.0-normalization_values.ipynb  tp-1.0-eda_3C90.ipynb  tp-1.0-features_3C90.ipynb  tp-1.1-fe_example.ipynb  wk-1.0-eda.ipynb  wk-1.1-pretest-data-eda.ipynb
dev/documentation/: concept_document.ipynb  hv-adapting-os-pareto_front.ipynb  hv-adapting-os-pareto_front_final_test_data.ipynb  hv-checkout_test_perfomance.ipynb  hv-full_pf_per_mat.ipynb  hv-pretest_histograms.ipynb  hv-qualiative_examples.ipynb
dev/evaluation/: hv-eval_trained_model.ipynb  hv-evaluation.ipynb  hv-final_test_data_evaluation.ipynb  hv-model_comparison.ipynb  hv-test_eval_functionality.ipynb  hv-transfer_models.ipynb  os-pareto_front.ipynb  os-pareto_front_final_test_data.ipynb  os-pareto_invest_new_mat_higher_res_no_htrafo.ipynb
dev/model_tests/: RNN_tests.ipynb  foundation_RNN.ipynb  hv-crossmaterial_posttraining.ipynb  hv-crossmaterial_tests.ipynb  hv-hidden_state_node.ipynb  hv-model_playground.ipynb  hv-neuralmag.ipynb  naive_NODE.ipynb  (+10 more)
examples/: final_test_data_evaluation.ipynb  model_inspection.ipynb  model_training.ipynb
mc2/: data_management.py  losses.py  metrics.py  model_setup.py  model_setup_jax.py
rhino-mag/: losses.py
rhmag/: data_management.py  losses.py  metrics.py  model_setup.py
(+95 files in other folders)
